--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,6 @@
-appnope==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-cycler==0.10.0
-decorator==4.0.10
-Django==1.10.3
-enum34==1.1.6
-ipython==5.1.0
-ipython-genutils==0.1.0
-matplotlib==1.5.3
-mysqlclient==1.3.9
-numpy==1.11.2
-pathlib2==2.1.0
-pexpect==4.2.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.7
-ptyprocess==0.5.1
-Pygments==2.1.3
-pyparsing==2.1.10
-python-dateutil==2.5.3
-pytz==2016.7
-PyYAML==3.12
-simplegeneric==0.8.1
-six==1.10.0
-traitlets==4.3.1
-wcwidth==0.1.7
+Django==1.10.6
+mysqlclient==1.3.10
+numpy==1.12.0
+scikit-learn==0.18.1
+scipy==0.18.1
+sklearn==0.0
