--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,62 @@
-Django==1.10.6
-mysqlclient==1.3.10
-numpy==1.12.0
+appnope==0.1.0
+backports-abc==0.5
+backports.shutil-get-terminal-size==1.0.0
+bleach==1.5.0
+certifi==2017.1.23
+configparser==3.5.0
+cycler==0.10.0
+Cython==0.25.2
+decorator==4.0.10
+Django==1.10.3
+entrypoints==0.2.2
+enum34==1.1.6
+functools32==3.2.3.post2
+html5lib==0.9999999
+ipykernel==4.5.2
+ipython==5.1.0
+ipython-genutils==0.1.0
+ipywidgets==5.2.2
+Jinja2==2.9.5
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==4.4.0
+jupyter-console==5.1.0
+jupyter-core==4.3.0
+MarkupSafe==0.23
+matplotlib==1.5.3
+mistune==0.7.3
+mpmath==0.19
+mysqlclient==1.3.9
+nbconvert==5.1.1
+nbformat==4.2.0
+nose==1.3.7
+notebook==4.4.1
+numpy==1.11.2
+pandas==0.19.2
+pandocfilters==1.4.1
+pathlib2==2.1.0
+pexpect==4.2.1
+pickleshare==0.7.4
+plotly==2.0.1
+prompt-toolkit==1.0.7
+ptyprocess==0.5.1
+Pygments==2.1.3
+pyparsing==2.1.10
+python-dateutil==2.5.3
+pytz==2016.7
+PyYAML==3.12
+pyzmq==16.0.2
+qtconsole==4.2.1
+requests==2.13.0
 scikit-learn==0.18.1
 scipy==0.18.1
-sklearn==0.0
+simplegeneric==0.8.1
+singledispatch==3.4.0.3
+six==1.10.0
+sympy==1.0
+terminado==0.6
+testpath==0.3
+tornado==4.4.2
+traitlets==4.3.1
+wcwidth==0.1.7
+widgetsnbextension==1.2.6
